增加redis调用类，修改es和mysql配置

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -1,15 +1,15 @@
-[erp_das_test]
-mysql_database = erp_das
-mysql_host =
-mysql_user =
-mysql_password =
-
-
-[erp_das_product]
-mysql_database = erp_das
-mysql_host =
-mysql_user =
-mysql_password =
+;[erp_das_test]
+;mysql_database = erp_das
+;mysql_host =
+;mysql_user =
+;mysql_password =
+;
+;
+;[erp_das_release]
+;mysql_database = erp_das
+;mysql_host =
+;mysql_user =
+;mysql_password =
 
 
 
@@ -19,7 +19,7 @@ mysql_host = 192.168.4.87
 mysql_user = root
 mysql_password = admin0808
 
-[erp_fmis_product]
+[erp_fmis_release]
 mysql_database = erp_fmis
 mysql_host = 10.100.1.122
 mysql_user = readonly
