更新数据库配置

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -24,3 +24,29 @@ mysql_database = erp_fmis
 mysql_host = 10.100.1.122
 mysql_user = readonly
 mysql_password = !QAZxsw2
+
+
+[erp_usermgt_test]
+mysql_database = erp_usermgt
+mysql_host = 192.168.4.87
+mysql_user = root
+mysql_password = admin0808
+
+[erp_usermgt_release]
+mysql_database = erp_usermgt
+mysql_host = 10.100.1.112
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
+
+[erp_usermgt_new_test]
+mysql_database = erp_usermgt_new
+mysql_host = 192.168.4.87
+mysql_user = root
+mysql_password = admin0808
+
+[erp_usermgt_new_release]
+mysql_database = erp_usermgt_new
+mysql_host = 10.100.1.112
+mysql_user = readonly
+mysql_password = !QAZxsw2
