--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -75,3 +75,42 @@ mysql_database = erp_usermgt_new
 mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
+
+;刊登系统
+[erp_publish_test]
+mysql_database = pmssale
+mysql_host = 192.168.4.187
+mysql_user = root
+mysql_password = !QAZxsw2
+
+[erp_publish_release]
+mysql_database = pmssale
+mysql_host = 192.168.2.230
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
+;销售订单系统
+[erp_oms_test]
+mysql_database = sale
+mysql_host = 10.100.2.111
+mysql_user = root
+mysql_password = !QAZxsw2
+
+[erp_oms_release]
+mysql_database = sale
+mysql_host = 10.100.1.121
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
+;仓库系统
+[erp_wms_test]
+mysql_database = wms
+mysql_host = 10.100.1.152
+mysql_user = root
+mysql_password = 123456
+
+[erp_wms_release]
+mysql_database = wms
+mysql_host = 10.100.1.114
+mysql_user = readonly
+mysql_password = !QAZxsw2
