增加刊登Amazon线上数据库配置

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -89,6 +89,12 @@ mysql_host = 192.168.2.230
 mysql_user = readonly
 mysql_password = !QAZxsw2
 
+[erp_publish_amazon_release]
+mysql_database = publish_amazon
+mysql_host = 192.168.1.229
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
 ;销售订单系统
 [erp_oms_test]
 mysql_database = sale
