--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -120,3 +120,16 @@ mysql_database = wms
 mysql_host = 10.100.1.114
 mysql_user = readonly
 mysql_password = !QAZxsw2
+
+;物流系统
+[erp_tms_test]
+mysql_database = logistics_engine
+mysql_host = 192.168.4.87
+mysql_user = root
+mysql_password = admin0808
+
+[erp_tms_release]
+mysql_database = logistics_engine
+mysql_host = 10.100.1.122
+mysql_user = readonly
+mysql_password = !QAZxsw2
