--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -34,7 +34,7 @@ mysql_password = admin0808
 
 [erp_product_release]
 mysql_database = erp_product
-mysql_host = 10.100.1.122
+mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
 ;采购系统
@@ -81,7 +81,7 @@ mysql_password = !QAZxsw2
 mysql_database = pmssale
 mysql_host = 192.168.4.187
 mysql_user = root
-mysql_password = !QAZxsw2
+mysql_password = admin0808
 
 [erp_publish_release]
 mysql_database = pmssale
