--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,80 @@
-'''启动命令(根目录下启动)'''
-gunicorn -preload -w 3 -b 0.0.0.0:5000 manage:app
-
-
-'''简易使用python虚拟环境'''
-1.安装虚拟环境pip
-pip install pipenv
-
-2.查看是否安装成功
-pipenv --version
-
-3.创建虚拟环境,先切换到目标项目目录
-pipenv install
-
-4.目标项目目录会创建Pipfile和Pipfile.lock文件
-
-5.查看项目位置：     pipenv --where
-　查看虚拟环境位置：  pipenv --venv
-　查看解释器信息：    pipenv --py
-
-6.进入虚拟环境
-pipenv shell
-
-7.在虚拟环境安装库
-pipenv install 库(用pipenv安装则该库只会安装在虚拟环境，本机环境不会安装)
-注意:不要使用pip install。虽然在虚拟环境中安装对应的包，但是不会更新Pipfile和Pipefile.lock
-
-8.卸载库
-pipenv uninstall 库
-
-9.退出虚拟环境
-exit
-
-10.删除虚拟环境
-pipenv --rm
-注意:"pipenv --rm"只是把创建的虚拟环境删除了，但Pipfile和Pipfile.lock还存在
+BeautifulReport~=0.1.3
+bs4~=0.0.1
+beautifulsoup4~=4.10.0
+Flask~=2.0.1
+selenium~=3.141.0
+requests~=2.26.0
+assertpy~=1.1
+elasticsearch6~=6.8.2
+pandas~=1.3.3
+python-dateutil~=2.8.2
+PyMySQL~=1.0.2
+redis~=3.5.3
+rediscluster~=0.2.0
+configparser~=5.0.2
+py~=1.10.0
+colorama~=0.4.4
+soupsieve~=2.2.1
+pip~=21.3
+toml~=0.10.2
+Brotli~=1.0.9
+tox~=3.24.4
+filelock~=3.2.0
+pluggy~=1.0.0
+six~=1.16.0
+packaging~=21.0
+pytest~=6.2.5
+pyzmq~=22.3.0
+gevent~=21.8.0
+attrs~=21.2.0
+pymongo~=3.12.0
+future~=0.18.2
+pika~=1.2.0
+pyee~=8.2.2
+pytz~=2021.1
+MarkupSafe~=2.0.1
+Werkzeug~=2.0.1
+dataclasses~=0.8
+Jinja2~=3.0.1
+click~=8.0.1
+itsdangerous~=2.0.1
+pywin32~=227
+numpy~=1.21.2
+setuptools~=58.1.0
+cffi~=1.14.6
+raven~=6.10.0
+certifi~=2021.5.30
+hiredis~=2.0.0
+bbarchivist~=4.0.0
+simplejson~=3.17.5
+websocket-client~=1.2.1
+docker~=5.0.2
+greenlet~=1.1.1
+psutil~=5.8.0
+msgpack~=1.0.2
+locust~=2.2.3
+geventhttpclient~=1.5.1
+roundrobin~=0.0.2
+ConfigArgParse~=1.5.2
+iniconfig~=1.1.1
+atomicwrites~=1.4.0
+chardet~=4.0.0
+urllib3~=1.26.7
+altgraph~=0.17.2
+gunicorn~=20.1.0
+openpyxl~=3.0.9
+defusedxml~=0.7.1
+idna~=3.2
+pyparsing~=2.4.7
+pycparser~=2.20
+pyppeteer~=0.2.6
+appdirs~=1.4.4
+websockets~=9.1
+tqdm~=4.62.3
+pefile~=2021.9.3
+a~=1.0
+virtualenv~=20.8.1
+distlib~=0.3.3
+platformdirs~=2.4.0
+pyinstaller~=4.5.1
+zipp~=3.5.0
