更新刊登系统测试环境mysql密码

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -81,7 +81,7 @@ mysql_password = !QAZxsw2
 mysql_database = pmssale
 mysql_host = 192.168.4.187
 mysql_user = root
-mysql_password = admin0808
+mysql_password = !QAZxsw2
 
 [erp_publish_release]
 mysql_database = pmssale
