--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -83,6 +83,12 @@ mysql_host = 192.168.4.187
 mysql_user = root
 mysql_password = !QAZxsw2
 
+[erp_publish_amazon_test]
+mysql_database = publish_amazon
+mysql_host = 192.168.4.187
+mysql_user = root
+mysql_password = !QAZxsw2
+
 [erp_publish_release]
 mysql_database = pmssale
 mysql_host = 192.168.2.230
