--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -1,17 +1,3 @@
-;[erp_das_test]
-;mysql_database = erp_das
-;mysql_host =
-;mysql_user =
-;mysql_password =
-;
-;
-;[erp_das_release]
-;mysql_database = erp_das
-;mysql_host =
-;mysql_user =
-;mysql_password =
-
-
 ;财务系统
 [erp_fmis_test]
 mysql_database = erp_fmis
@@ -21,7 +7,7 @@ mysql_password = admin0808
 
 [erp_fmis_release]
 mysql_database = erp_fmis
-mysql_host = 10.100.1.122
+mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
 
@@ -46,7 +32,7 @@ mysql_password = admin0808
 
 [erp_pms_release]
 mysql_database = erp_pms
-mysql_host = 10.100.1.122
+mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
 
@@ -136,6 +122,13 @@ mysql_password = admin0808
 
 [erp_tms_release]
 mysql_database = logistics_engine
-mysql_host = 10.100.1.122
+mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
+
+;测试数据库
+[test]
+mysql_database = data_warehouse
+mysql_host = 192.168.3.180
+mysql_user = root
+mysql_password = 123456
