--- a/apps/Common_Config/redis_sources_config.ini
+++ b/apps/Common_Config/redis_sources_config.ini
@@ -1,53 +1,71 @@
 [redis_test01]
 redis_host = 192.168.3.5
 redis_port = 8001
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_test02]
 redis_host = 192.168.3.5
 redis_port = 8002
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_test03]
 redis_host = 192.168.3.5
 redis_port = 8003
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_test04]
 redis_host = 192.168.3.6
 redis_port = 8004
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_test05]
 redis_host = 192.168.3.6
 redis_port = 8005
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_test06]
 redis_host = 192.168.3.6
 redis_port = 8006
-user = 'redis_admin'
+username = 'redis_admin'
 password = 'halfj$$1/2red'
 
 [redis_release01]
-redis_host = 10.100.1.91
+redis_host = 10.100.1.181
 redis_port = 6379
-user = 'redis_admin'
-password = 'halfj$$1/2red'
+username = 'readonly'
+password = '!QAZxsw2'
 
 [redis_release02]
-redis_host = 10.100.1.93
+redis_host = 10.100.1.182
 redis_port = 6379
-user = 'redis_admin'
-password = 'halfj$$1/2red'
+username = 'readonly'
+password = '!QAZxsw2'
 
 [redis_release03]
-redis_host = 10.100.1.95
+redis_host = 10.100.1.183
 redis_port = 6379
-user = 'redis_admin'
-password = 'halfj$$1/2red'
+username = 'readonly'
+password = '!QAZxsw2'
+
+[redis_release04]
+redis_host = 10.100.1.184
+redis_port = 6379
+username = 'readonly'
+password = '!QAZxsw2'
+
+[redis_release05]
+redis_host = 10.100.1.185
+redis_port = 6379
+user = 'readonly'
+password = '!QAZxsw2'
+
+[redis_release06]
+redis_host = 10.100.1.186
+redis_port = 6379
+username = 'readonly'
+password = '!QAZxsw2'
