--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,102 @@
-BeautifulReport~=0.1.3
-bs4~=0.0.1
-beautifulsoup4~=4.10.0
-Flask~=2.0.1
-selenium~=3.141.0
-requests~=2.26.0
-assertpy~=1.1
-elasticsearch6~=6.8.2
-pandas~=1.3.3
-python-dateutil~=2.8.2
-PyMySQL~=1.0.2
-redis~=3.5.3
-rediscluster~=0.2.0
-configparser~=5.0.2
-py~=1.10.0
-colorama~=0.4.4
-soupsieve~=2.2.1
-pip~=21.3
-toml~=0.10.2
-Brotli~=1.0.9
-tox~=3.24.4
-filelock~=3.2.0
-pluggy~=1.0.0
-six~=1.16.0
-packaging~=21.0
-pytest~=6.2.5
-pyzmq~=22.3.0
-gevent~=21.8.0
-attrs~=21.2.0
-pymongo~=3.12.0
-future~=0.18.2
-pika~=1.2.0
-pyee~=8.2.2
-pytz~=2021.1
-MarkupSafe~=2.0.1
-Werkzeug~=2.0.1
-dataclasses~=0.6
-Jinja2~=3.0.1
-click~=8.0.1
-itsdangerous~=2.0.1
-pywin32~=227
-numpy~=1.21.2
-setuptools~=58.1.0
-cffi~=1.14.6
-raven~=6.10.0
-certifi~=2021.5.30
-hiredis~=2.0.0
-bbarchivist~=4.0.0
-simplejson~=3.17.5
-websocket-client~=1.2.1
-docker~=5.0.2
-greenlet~=1.1.1
-psutil~=5.8.0
-msgpack~=1.0.2
-locust~=2.2.3
-geventhttpclient~=1.5.1
-roundrobin~=0.0.2
-ConfigArgParse~=1.5.2
-iniconfig~=1.1.1
-atomicwrites~=1.4.0
-chardet~=4.0.0
-urllib3~=1.26.7
-altgraph~=0.17.2
-gunicorn~=20.1.0
-openpyxl~=3.0.9
-defusedxml~=0.7.1
-idna~=3.2
-pyparsing~=2.4.7
-pycparser~=2.20
-pyppeteer~=0.2.6
-appdirs~=1.4.4
-websockets~=9.1
-tqdm~=4.62.3
-pefile~=2021.9.3
-a~=1.0
-virtualenv~=20.8.1
-distlib~=0.3.3
-platformdirs~=2.4.0
-pyinstaller~=4.5.1
-zipp~=3.5.0
+alembic==1.7.7
+APScheduler==3.9.1
+assertpy==1.1
+async-generator==1.10
+async-timeout==4.0.2
+atomicwrites==1.4.0
+attrs==21.4.0
+backports.zoneinfo==0.2.1
+BeautifulReport==0.1.3
+beautifulsoup4==4.11.1
+Brotli==1.0.9
+bs4==0.0.1
+certifi==2021.10.8
+cffi==1.15.0
+chardet==3.0.4
+charset-normalizer==2.0.12
+click==7.1.2
+cmp==0.0.1
+colorama==0.4.4
+ConfigArgParse==1.5.3
+cryptography==37.0.1
+ddt==1.4.4
+deepdiff==5.8.0
+Deprecated==1.2.13
+elasticsearch6==6.8.2
+Flask==2.0.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+Flask-Migrate==2.7.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+future==0.18.2
+gevent==21.12.0
+geventhttpclient==1.5.3
+greenlet==1.1.2
+h11==0.13.0
+idna==2.10
+ijson==3.1.4
+importlib-metadata==4.11.3
+importlib-resources==5.7.1
+iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+locust==2.8.6
+Mako==1.2.0
+MarkupSafe==2.1.1
+msgpack==1.0.3
+numpy==1.22.4
+ordered-set==4.1.0
+outcome==1.1.0
+packaging==21.3
+pandas==1.4.2
+pluggy==1.0.0
+prometheus-client==0.14.1
+psutil==5.9.0
+psycopg2==2.9.3
+pure-sasl==0.6.2
+py==1.11.0
+pycparser==2.21
+PyHive==0.6.5
+pymongo==4.1.1
+PyMySQL==1.0.2
+pyOpenSSL==22.0.0
+pyparsing==3.0.8
+PySocks==1.7.1
+pytest==7.1.2
+python-dateutil==2.8.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==303
+PyYAML==5.3.1
+pyzmq==22.3.0
+redis==3.5.3
+redis-py-cluster==2.1.3
+requests==2.24.0
+roundrobin==0.0.2
+selenium==4.1.5
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.36
+thrift==0.16.0
+thrift-sasl==0.4.3
+tomli==2.0.1
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.2.0
+tzdata==2022.1
+tzlocal==4.2
+unittestreport==1.4.0
+urllib3==1.25.11
+Werkzeug==2.1.2
+wrapt==1.14.0
+wsproto==1.1.0
+wtf==0.1
+WTForms==3.0.1
+xlrd==2.0.1
+zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
