--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ deepdiff==5.8.0
 Deprecated==1.2.13
 elasticsearch6==6.8.2
 Flask==2.0.2
+Flask-APScheduler==1.12.3
 Flask-BasicAuth==0.2.0
 Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
@@ -74,6 +75,7 @@ pyzmq==22.3.0
 redis==3.5.3
 redis-py-cluster==2.1.3
 requests==2.24.0
+requests-toolbelt==0.9.1
 roundrobin==0.0.2
 selenium==4.1.5
 six==1.16.0
