smt线上服务器配置修改

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -87,6 +87,12 @@ mysql_host = 10.100.1.113
 mysql_user = readonly
 mysql_password = !QAZxsw2
 
+[erp_publish_smt_release]
+mysql_database = publish_smt
+mysql_host = 10.100.1.116
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
 ;销售订单系统
 [erp_oms_test]
 mysql_database = sale
