新增线上es配置集群

--- a/apps/Common_Config/es_sources_config.ini
+++ b/apps/Common_Config/es_sources_config.ini
@@ -8,3 +8,20 @@ es_timeout = 50000
 es_host = 10.100.1.71
 es_port = 9200
 es_timeout = 50000
+
+;shopee_item&aliexpress_product_listing索引迁移新集群
+;10.100.1.61:9300,10.100.1.62:9300,10.100.1.63:9300
+[es_release_61]
+es_host = 10.100.1.61
+es_port = 9300
+es_timeout = 50000
+
+[es_release_62]
+es_host = 10.100.1.62
+es_port = 9300
+es_timeout = 50000
+
+[es_release_63]
+es_host = 10.100.1.63
+es_port = 9300
+es_timeout = 50000
