增加hr数据库配置

--- a/apps/Common_Config/mysql_sources_config.ini
+++ b/apps/Common_Config/mysql_sources_config.ini
@@ -62,6 +62,19 @@ mysql_host = 10.100.1.112
 mysql_user = readonly
 mysql_password = !QAZxsw2
 
+;HR系统
+[erp_hr_test]
+mysql_database = erp_hr
+mysql_host = 192.168.4.87
+mysql_user = root
+mysql_password = admin0808
+
+[erp_hr_release]
+mysql_database = erp_hr
+mysql_host = 10.100.1.112
+mysql_user = readonly
+mysql_password = !QAZxsw2
+
 ;刊登系统
 [erp_publish_test]
 mysql_database = pmssale
@@ -114,7 +127,7 @@ mysql_password = !QAZxsw2
 
 ;仓库系统
 [erp_wms_test]
-mysql_database = wms
+mysql_database = wms-151
 mysql_host = 10.100.1.152
 mysql_user = root
 mysql_password = 123456
